@@ -60,7 +60,7 @@ the symbolic signal name can be used. In
 .B pgrep
 or
 .B pidwait
-mode this has no effect unless used in conjunction with
+mode only the long option can be used and has no effect unless used in conjunction with
 \fB\-\-require\-handler\fR to filter to processes with a userspace signal
 handler present for a particular signal.
 
